@@ -1258,7 +1258,7 @@ class WorkingTreeFormat4(WorkingTreeFormat3):
         return "Working tree format 4"
 
     def initialize(self, a_bzrdir, revision_id=None, from_branch=None,
-                   accelerator_tree=None):
+                   accelerator_tree=None, hardlink=False):
         """See WorkingTreeFormat.initialize().
 
         :param revision_id: allows creating a working tree at a different
@@ -1267,6 +1267,8 @@ class WorkingTreeFormat4(WorkingTreeFormat3):
             contents more quickly than the revision tree, i.e. a workingtree.
             The revision tree will be used for cases where accelerator_tree's
             content is different.
+        :param hardlink: If true, hard-link files from accelerator_tree,
+            where possible.
 
         These trees get an initial random root id, if their repository supports
         rich root data, TREE_ROOT otherwise.
@@ -1327,7 +1329,8 @@ class WorkingTreeFormat4(WorkingTreeFormat3):
             if basis_root_id is not None:
                 wt._set_root_id(basis_root_id)
                 wt.flush()
-            transform.build_tree(basis, wt, accelerator_tree)
+            transform.build_tree(basis, wt, accelerator_tree,
+                                 hardlink=hardlink)
             basis.unlock()
         finally:
             control_files.unlock()
